--- a/examples/providerconfig/secret.yaml.tmpl
+++ b/examples/providerconfig/secret.yaml.tmpl
@@ -7,6 +7,6 @@ type: Opaque
 stringData:
   credentials: |
     {
-      "username": "admin",
-      "password": "t0ps3cr3t11"
+      "auth": "admin:70p53cr37",
+      "url": "http://grafana.grafana.svc/"
     }
